--- a/client/src/styles/MyRecipes.module.css
+++ b/client/src/styles/MyRecipes.module.css
@@ -101,6 +101,8 @@
             display: flex;
             justify-content: center;
             padding: 0.5em;
+            border: 1px solid var(--black-color-liest);
+            border-right: 0;
             cursor: pointer;
         }
             /* first button container */
